err/ansible-cmdb.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/ansiblecmdb'...
Listing './lib/ansiblecmdb/data'...
Listing './lib/ansiblecmdb/data/static'...
Listing './lib/ansiblecmdb/data/static/images'...
Listing './lib/ansiblecmdb/data/static/js'...
Listing './lib/ansiblecmdb/data/tpl'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Mako-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/ansible_cmdb-1.25.dist-info'...
Listing './lib/python3.5/site-packages/ansiblecmdb'...
Listing './lib/python3.5/site-packages/ansiblecmdb/data'...
Listing './lib/python3.5/site-packages/ansiblecmdb/data/static'...
Listing './lib/python3.5/site-packages/ansiblecmdb/data/static/images'...
Listing './lib/python3.5/site-packages/ansiblecmdb/data/static/js'...
Listing './lib/python3.5/site-packages/ansiblecmdb/data/tpl'...
Listing './lib/python3.5/site-packages/jsonxs'...
Listing './lib/python3.5/site-packages/jsonxs-0.6.egg-info'...
Listing './lib/python3.5/site-packages/mako'...
Listing './lib/python3.5/site-packages/mako/ext'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/ushlex-0.99.egg-info'...
Compiling './lib/python3.5/site-packages/ushlex.py'...
***   File "./lib/python3.5/site-packages/ushlex.py", line 59
    print 'shlex: reading from %s, line %d' \
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
